--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
           <h1 id="project_title">Human Rights Prototypes</h1>
           <h2 id="project_tagline"></h2>
 
-            <section id="downloads">
+<!--            <section id="downloads">
               <a class="zip_download_link" href="https://github.com/benetech/HumanRightsPrototypes/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/benetech/HumanRightsPrototypes/tarball/master">Download this project as a tar.gz file</a>
             </section>
+-->
         </header>
     </div>
 
