--- a/index.html
+++ b/index.html
@@ -33,30 +33,51 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research Documentation</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Read our document about user research and design here:</p>
+<p><a href="https://benetech.box.com/research"><img src="../resources/Doc.PNG"></a></p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="media-repo" class="anchor" href="#media-repo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Human Rights Media Repository</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p><a href="https://benetech.box.com/s/4bie7ylvi0nn5pj6x795j7asse1v35r1">Document Link</a></p>
+<p><a href="https://youtu.be/c4a4krB0P1s">Video Link</a></p>
+<p><a href="https://youtu.be/c4a4krB0P1s"><img src="../resources/MediaRepo.png"></a></p>
+<p>Human rights organizations protect video collections gathered from partners and activists in their region. Often, these videos are unique records of human rights abuses and live exclusively in these private collections to protect the safety of those involved or prevent removal from public servers. This media sits invisible to other human rights defenders and prevents momentum from building between organizations with similar causes. We propose a platform that allows uploaders to add and share manual, automatic, and crowdsourced metadata to their media. Uploaders can attach time-coded content tags, censored thumbnails or video clips, and supporting verification documents. Users may search for specific videos, or set up alerts and filters for trending content or regions. Build-in secure communications will allow requests for media transfers to occur within the established vetting process of the organizations involved.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="training" class="anchor" href="#training" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Digital Security Training ARG</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
+<p><a href="https://benetech.box.com/s/f3giov35cvvix5pox8owf5pybh3dyn9j">Document Link</a></p>
+<p><a href="https://youtu.be/Wmu3NgXmyBk">Video Link</a></p>
+<p><a href="https://youtu.be/Wmu3NgXmyBk"><img src="../resources/Training.png"></a></p>
+<p>Digital Security training today revolves mostly around in-person trainings or relying upon members in your organization to read through one of the multitude of densely worded training guides. These methods aren’t participatory, aren’t taught within the context of day-to-day work, and quickly grow stale. In Artificial Reality Games (ARGs), participants are asked to investigate and complete tasks in a fictitious storyline through their real-world devices and interactions. We propose the development of interactive scenarios that test participants’ preparedness on digital security content provided by Benetech and modules created by other development partners or tool creators.</p>
+
+<h3>
+<a id="plain-sight" class="anchor" href="#plain-sight" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>In Plain Sight Text Obfuscation</h3>
+
+<p><a href="https://benetech.box.com/s/lckniqo7o91ywfxs1aqjfagdosmrjk52">Document Link</a></p>
+<p><a href="https://youtu.be/CE3mLU7bnFw">Video Link</a></p>
+<p><a href="https://youtu.be/CE3mLU7bnFw"><img src="../resources/IPS.png"></a></p>
+<p>Encryption use has become easier in recent history, still more often than not, encrypted communication tools require activists to move their entire network of contacts onto using a platform or app that may not have been designed for the context in which they operate. Often these are western tools with no historical trust, and sometimes the simple presence of encrypted traffic or traffic from known encryption applications may be enough of a red flag to draw attention to activists. We propose a system that uses research algorithms to encode messages into different human-readable text. This new text can be shared freely on any platform that is used by the activists, blends into network traffic, and can still be decoded by trusted partners.</p>
+
+<h3>
+<a id="guided-submission" class="anchor" href="#guided-submission" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>UPR Guided Submission</h3>
+
+<p><a href="https://benetech.box.com/s/uc24gcjzepagnqlaetst8lrlbnjd8x0z">Document Link</a></p>
+<p><a href="https://youtu.be/svsP5v6uQIs">Video Link</a></p>
+<p><a href="https://youtu.be/svsP5v6uQIs"><img src="../resources/Guided.png"></a></p>
+<p>The UN’s UPR remains an important opportunity for human rights organizations to offer summative data and findings to the UN council for review at the national level. While the intent of this report includes soliciting reports from a wide-array of voices, the current process for report submission is a substantial barrier for groups who want to get involved. Our platform can assist with guidelines on proper submission content as well as assisting with the minutia and regulations involved with report formatting and submission. By considerably lowering the barrier to entry, we can ensure more voices are in the conversation. This platform could be expanded to additional difficult forms or request submissions in the human rights space.</p>
+
+
+
+
+
+
+
+
+</section>
     </div>
 
     <!-- FOOTER  -->
