--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research Documentation</h3>
 
 <p>Read our document about user research and design here:</p>
-<p><a href="https://benetech.box.com/research"><img src="/resources/Doc.PNG"></a></p>
+<p><a href="https://benetech.box.com/research"><img src="resources/Doc.PNG"></a></p>
 
 <h3>
 <a id="media-repo" class="anchor" href="#media-repo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Human Rights Media Repository</h3>
