--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/benetech/HumanRightsPrototypes">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/benetech/HRP">View on GitHub</a>
 
           <h1 id="project_title">Human Rights Prototypes</h1>
           <h2 id="project_tagline"></h2>
 
 <!--            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/benetech/HumanRightsPrototypes/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/benetech/HumanRightsPrototypes/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/benetech/HRP/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/benetech/HRP/tarball/master">Download this project as a tar.gz file</a>
             </section>
 -->
         </header>
@@ -36,14 +36,14 @@
 <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Research Documentation</h3>
 
 <p>Read our document about user research and design here:</p>
-<p><a href="https://benetech.box.com/research"><img src="https://benetech.github.io/HumanRightsPrototypes/resources/Doc.PNG"></a></p>
+<p><a href="https://benetech.box.com/research"><img src="https://benetech.github.io/HRP/resources/Doc.PNG"></a></p>
 
 <h3>
 <a id="media-repo" class="anchor" href="#media-repo" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Human Rights Media Repository</h3>
 
 <p><a href="https://benetech.box.com/s/4bie7ylvi0nn5pj6x795j7asse1v35r1">Document Link</a></p>
 <p><a href="https://youtu.be/c4a4krB0P1s">Video Link</a></p>
-<p><a href="https://youtu.be/c4a4krB0P1s"><img src="https://benetech.github.io/HumanRightsPrototypes/resources/MediaRepo.png"></a></p>
+<p><a href="https://youtu.be/c4a4krB0P1s"><img src="https://benetech.github.io/HRP/resources/MediaRepo.png"></a></p>
 <p>Human rights organizations protect video collections gathered from partners and activists in their region. Often, these videos are unique records of human rights abuses and live exclusively in these private collections to protect the safety of those involved or prevent removal from public servers. This media sits invisible to other human rights defenders and prevents momentum from building between organizations with similar causes. We propose a platform that allows uploaders to add and share manual, automatic, and crowdsourced metadata to their media. Uploaders can attach time-coded content tags, censored thumbnails or video clips, and supporting verification documents. Users may search for specific videos, or set up alerts and filters for trending content or regions. Build-in secure communications will allow requests for media transfers to occur within the established vetting process of the organizations involved.</p>
 
 <h3>
@@ -51,7 +51,7 @@
 
 <p><a href="https://benetech.box.com/s/f3giov35cvvix5pox8owf5pybh3dyn9j">Document Link</a></p>
 <p><a href="https://youtu.be/Wmu3NgXmyBk">Video Link</a></p>
-<p><a href="https://youtu.be/Wmu3NgXmyBk"><img src="https://benetech.github.io/HumanRightsPrototypes/resources/Training.png"></a></p>
+<p><a href="https://youtu.be/Wmu3NgXmyBk"><img src="https://benetech.github.io/HRP/resources/Training.png"></a></p>
 <p>Digital Security training today revolves mostly around in-person trainings or relying upon members in your organization to read through one of the multitude of densely worded training guides. These methods aren’t participatory, aren’t taught within the context of day-to-day work, and quickly grow stale. In Artificial Reality Games (ARGs), participants are asked to investigate and complete tasks in a fictitious storyline through their real-world devices and interactions. We propose the development of interactive scenarios that test participants’ preparedness on digital security content provided by Benetech and modules created by other development partners or tool creators.</p>
 
 <h3>
@@ -59,7 +59,7 @@
 
 <p><a href="https://benetech.box.com/s/lckniqo7o91ywfxs1aqjfagdosmrjk52">Document Link</a></p>
 <p><a href="https://youtu.be/CE3mLU7bnFw">Video Link</a></p>
-<p><a href="https://youtu.be/CE3mLU7bnFw"><img src="https://benetech.github.io/HumanRightsPrototypes/resources/IPS.png"></a></p>
+<p><a href="https://youtu.be/CE3mLU7bnFw"><img src="https://benetech.github.io/HRP/resources/IPS.png"></a></p>
 <p>Encryption use has become easier in recent history, still more often than not, encrypted communication tools require activists to move their entire network of contacts onto using a platform or app that may not have been designed for the context in which they operate. Often these are western tools with no historical trust, and sometimes the simple presence of encrypted traffic or traffic from known encryption applications may be enough of a red flag to draw attention to activists. We propose a system that uses research algorithms to encode messages into different human-readable text. This new text can be shared freely on any platform that is used by the activists, blends into network traffic, and can still be decoded by trusted partners.</p>
 
 <h3>
@@ -67,7 +67,7 @@
 
 <p><a href="https://benetech.box.com/s/uc24gcjzepagnqlaetst8lrlbnjd8x0z">Document Link</a></p>
 <p><a href="https://youtu.be/svsP5v6uQIs">Video Link</a></p>
-<p><a href="https://youtu.be/svsP5v6uQIs"><img src="https://benetech.github.io/HumanRightsPrototypes/resources/Guided.png"></a></p>
+<p><a href="https://youtu.be/svsP5v6uQIs"><img src="https://benetech.github.io/HRP/resources/Guided.png"></a></p>
 <p>The UN’s UPR remains an important opportunity for human rights organizations to offer summative data and findings to the UN council for review at the national level. While the intent of this report includes soliciting reports from a wide-array of voices, the current process for report submission is a substantial barrier for groups who want to get involved. Our platform can assist with guidelines on proper submission content as well as assisting with the minutia and regulations involved with report formatting and submission. By considerably lowering the barrier to entry, we can ensure more voices are in the conversation. This platform could be expanded to additional difficult forms or request submissions in the human rights space.</p>
 
 
