Add presentation link

--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
 <p><a href="https://youtu.be/svsP5v6uQIs"><img src="https://benetech.github.io/HRP/resources/Guided.png"></a></p>
 <p>The UN’s UPR remains an important opportunity for human rights organizations to offer summative data and findings to the UN council for review at the national level. While the intent of this report includes soliciting reports from a wide-array of voices, the current process for report submission is a substantial barrier for groups who want to get involved. Our platform can assist with guidelines on proper submission content as well as assisting with the minutia and regulations involved with report formatting and submission. By considerably lowering the barrier to entry, we can ensure more voices are in the conversation. This platform could be expanded to additional difficult forms or request submissions in the human rights space.</p>
 
-
-<h3>Please send any and all feedback to: john h @ benetech.org, or organize a review call here: <a href="https://calendly.com/johnhbenetech"</a>https://calendly.com/johnhbenetech</h3>
+<h3><a id="contact-links" class="anchor" href="#contact-links" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact Information and Links</h3>
+</h3>
+<p><a href="https://benetech.github.io/HRP/resources/RightsConPresentation.pdf"><img src="https://benetech.github.io/HRP/resources/Pres.PNG"></a></p>
+<p>Please send any and all feedback to: john h @ benetech.org, or organize a review call here: <a href="https://calendly.com/johnhbenetech"</a>https://calendly.com/johnhbenetech</p>
 
 
 
