Add presentation info

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
 <h3><a id="contact-links" class="anchor" href="#contact-links" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact Information and Links</h3>
 </h3>
+<p>Click the image below to download our presentation from  RightsCon 2016:</p>
 <p><a href="https://benetech.github.io/HRP/resources/RightsConPresentation.pdf"><img src="https://benetech.github.io/HRP/resources/Pres.PNG"></a></p>
 <p>Please send any and all feedback to: john h @ benetech.org, or organize a review call here: <a href="https://calendly.com/johnhbenetech"</a>https://calendly.com/johnhbenetech</p>
 
