--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/benetech/HRP">View on GitHub</a>
+          <a id="forkme_banner" style="background: url('../images/BenetechLogo.png') #0090ff no-repeat 95% 50%;" href=""></a>
 
           <h1 id="project_title">Human Rights Prototypes</h1>
           <h2 id="project_tagline"></h2>
